--- a/helm/radarr.yaml
+++ b/helm/radarr.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: linuxserver/radarr
   tag: 3.2.2.5080-ls112
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 ports:
   - port: 7878
