--- a/helm/prometheus.yaml
+++ b/helm/prometheus.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: prom/prometheus
   tag: v2.29.2
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 ports:
   - port: 9090
