--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,8 +6,12 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: azure/setup-helm@v1.1
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Install helm
+        uses: azure/setup-helm@v1.1
         id: install
-      - run: |
+      - name: Validate helm charts
+        run: |
           cd helm
           make lint
