--- a/docker/adguard/docker-compose.yml
+++ b/docker/adguard/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 services:
   adguard:
     image: adguard/adguardhome:v0.107.0-b.9
+    restart: unless-stopped
     ports:
       - 53:53
       - 53:53/udp
