--- a/docker/node-exporter/docker-compose.yml
+++ b/docker/node-exporter/docker-compose.yml
@@ -2,5 +2,12 @@ version: '3.3'
 services:
   node-exporter:
     image: quay.io/prometheus/node-exporter:latest
+    restart: unless-stopped
+    command:
+      - '--path.rootfs=/host'
+    pid: host
+    network_mode: host
     ports:
       - 9100:9100
+    volumes:
+      - '/:/host:ro,rslave'
