Add option for Pod to wait for Service (#29)
* Add waitForServices

* Use kubernetes-e2e-test-images/dnsutils for nslookup

* Remove ports from node-exporter

--- a/helm/radarr.yaml
+++ b/helm/radarr.yaml
@@ -20,4 +20,6 @@ volumes:
     hostPath: "/storage/downloads"
     containerPath: "/downloads"
 
-env:
+waitForServices:
+  - qbittorrent-service
+  - jackett-service
