--- a/helm/base/templates/deployment.yaml
+++ b/helm/base/templates/deployment.yaml
@@ -18,6 +18,19 @@ spec:
           hostPath:
             path: {{ .hostPath }}
         {{- end }}
+      initContainers:
+        {{- range .Values.waitForServices }}
+        - name: wait-for-{{ . }}
+          image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
+          command:
+            - sh
+            - -c
+            - |
+              until nslookup {{ . }}; do
+                echo waiting for {{ . }};
+                sleep 2;
+              done
+        {{- end }}
       containers:
         - name: {{ .Release.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -29,10 +42,6 @@ spec:
             {{- end }}
           env:
             {{- range $key, $value := .Values.env }}
-            - name: {{ $key }}
-              value: {{ $value | quote }}
-            {{- end }}
-            {{- range $key, $value := .Values.baseEnv }}
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
