--- a/helm/base/templates/deployment.yaml
+++ b/helm/base/templates/deployment.yaml
@@ -36,9 +36,11 @@ spec:
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            {{- range .Values.ports }}
+            {{- range .Values.services }}
+            {{- range .ports }}
             - containerPort: {{ .containerPort }}
               protocol: {{ .protocol | default "TCP" | quote }}
+            {{- end }}
             {{- end }}
           env:
             {{- range $key, $value := .Values.env }}
