--- a/helm/base/values.yaml
+++ b/helm/base/values.yaml
@@ -5,11 +5,13 @@ image:
   tag:
   pullPolicy: IfNotPresent
 
-ports:
-  - name: http
-    port: 80
-    containerPort: 80
-    protocol: TCP
+services:
+  - type: LoadBalancer
+    suffix:
+    ports:
+      - protocol: TCP
+        port: 80
+        containerPort: 80
 
 volumes:
 
