--- a/helm/qbittorrent.yaml
+++ b/helm/qbittorrent.yaml
@@ -5,9 +5,12 @@ image:
   tag: version-14.3.7.99202108032349-7395-0415c0c6fubuntu20.04.1
   pullPolicy: IfNotPresent
 
-ports:
-  - port: 8112
-    containerPort: 8112
+services:
+  - type: LoadBalancer
+    ports:
+      - protocol: TCP
+        port: 8112
+        containerPort: 8112
 
 volumes:
   - name: qbittorrent-config
