--- a/helm/tautulli.yaml
+++ b/helm/tautulli.yaml
@@ -5,9 +5,12 @@ image:
   tag: v2.7.4
   pullPolicy: IfNotPresent
 
-ports:
-  - port: 8181
-    containerPort: 8181
+services:
+  - type: LoadBalancer
+    ports:
+      - protocol: TCP
+        port: 8181
+        containerPort: 8181
 
 volumes:
   - name: tautulli-config
