--- a/helm/Makefile
+++ b/helm/Makefile
@@ -3,12 +3,12 @@ help: ## Show this help message
 
 lint: ## Run linter
 	helm lint ./prometheus/
-	helm lint ./plex/
 	helm lint ./pomerium/
 	helm lint ./base/ --values code-server.yaml
 	helm lint ./base/ --values grafana.yaml
 	helm lint ./base/ --values httpbin.yaml
 	helm lint ./base/ --values jackett.yaml
+	helm lint ./base/ --values plex.yaml
 	helm lint ./base/ --values qbittorrent.yaml
 	helm lint ./base/ --values radarr.yaml
 	helm lint ./base/ --values sonarr.yaml
