--- a/helm/prometheus/Chart.yaml
+++ b/helm/prometheus/Chart.yaml
@@ -5,3 +5,7 @@ icon: https://
 type: application
 version: 0.1.0
 appVersion: "v2.29.2"
+dependencies:
+  - name: base
+    version: 1.0.0
+    repository: file://../base
