--- a/helm/prometheus/templates/config.yaml
+++ b/helm/prometheus/templates/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-config
+  name: prometheus-config
 data:
   prometheus.yml: |-
     global:
