--- a/helm/pomerium/Chart.yaml
+++ b/helm/pomerium/Chart.yaml
@@ -5,3 +5,7 @@ icon: https://
 type: application
 version: 0.1.0
 appVersion: "latest"
+dependencies:
+  - name: base
+    version: 1.0.0
+    repository: file://../base
