--- a/helm/prometheus/Chart.yaml
+++ b/helm/prometheus/Chart.yaml
@@ -3,5 +3,9 @@ name: prometheus
 description: Prometheus chart
 icon: https://
 type: application
-version: 0.1.0
+version: 0.2.0
 appVersion: "v2.29.2"
+dependencies:
+  - name: base
+    version: 1.0.0
+    repository: file://../base
