--- a/helm/Makefile
+++ b/helm/Makefile
@@ -18,7 +18,7 @@ lint: ## Run linter
 update-base: ## Update apps that use base chart
 	helm upgrade --install code-server ./base/ --values code-server.yaml
 	helm upgrade --install grafana ./base/ --values grafana.yaml
-	helm upgrade --install httpbin ./base/ --values httpbin.yaml
+# 	helm upgrade --install httpbin ./base/ --values httpbin.yaml
 	helm upgrade --install jackett ./base/ --values jackett.yaml
 	helm upgrade --install plex ./base/ --values plex.yaml
 	helm upgrade --install qbittorrent ./base/ --values qbittorrent.yaml
