--- a/helm/code-server.yaml
+++ b/helm/code-server.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/code-server
-  tag: v3.11.1-ls91
+  tag: version-v3.12.0
   pullPolicy: IfNotPresent
 
 services:
