--- a/helm/qbittorrent.yaml
+++ b/helm/qbittorrent.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/qbittorrent
-  tag: version-14.3.7.99202108032349-7395-0415c0c6fubuntu20.04.1
+  tag: version-14.3.8.99202109100310-7422-338d9a084ubuntu20.04.1
   pullPolicy: IfNotPresent
 
 services:
