--- a/helm/radarr.yaml
+++ b/helm/radarr.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/radarr
-  tag: 3.2.2.5080-ls112
+  tag: version-3.2.2.5080
   pullPolicy: IfNotPresent
 
 services:
