--- a/helm/plex.yaml
+++ b/helm/plex.yaml
@@ -39,3 +39,8 @@ volumeMounts:
 env:
   - name: UMASK
     value: "022"
+
+ingressRoutes:
+  websecure:
+    match: Host(`plex.hobroker.me`)
+    port: 32400
