--- a/helm/grafana.yaml
+++ b/helm/grafana.yaml
@@ -31,7 +31,7 @@ env:
   - name: GF_AUTH_PROXY_ENABLED
     value: "true"
   - name: GF_AUTH_PROXY_HEADER_NAME
-    value: "X-Pomerium-Claim-Email"
+    value: "X-Forwarded-User"
   - name: GF_AUTH_PROXY_HEADER_PROPERTY
     value: "username"
   - name: GF_AUTH_PROXY_AUTO_SIGN_UP
@@ -40,3 +40,10 @@ env:
     value: "false"
   - name: GF_METRICS_ENABLED
     value: "true"
+
+ingressRoutes:
+  websecure:
+    match: Host(`grafana.hobroker.me`)
+    port: 5000
+    middlewares:
+      - name: traefik-sso
