--- a/helm/httpbin.yaml
+++ b/helm/httpbin.yaml
@@ -9,3 +9,10 @@ services:
   - type: LoadBalancer
     ports:
       - port: 8080
+
+ingressRoutes:
+  websecure:
+    match: Host(`httpbin.hobroker.me`)
+    port: 8080
+    middlewares:
+      - name: traefik-sso
