--- a/helm/syncthing.yaml
+++ b/helm/syncthing.yaml
@@ -35,3 +35,10 @@ volumeMounts:
     mountPath: "/config"
   - name: syncthing-wdata
     mountPath: "/mnt/wdata"
+
+ingressRoutes:
+  websecure:
+    match: Host(`radarr.hobroker.me`)
+    port: 8384
+    middlewares:
+      - name: traefik-sso
