--- a/helm/traefik-sso/templates/forwardAuthMiddleware.yaml
+++ b/helm/traefik-sso/templates/forwardAuthMiddleware.yaml
@@ -1,10 +1,12 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: traefik-sso
+  name: {{ .Release.Name }}-forward-auth
 spec:
   forwardAuth:
     address: http://traefik-sso:4181
     trustForwardHeader: true
     authResponseHeaders:
       - "X-Forwarded-User"
+      - "X-Auth-User"
+      - "X-Secret"
