Add traefik and forward-auth middleware (#38)
* Add traefik-forward-auth middleware

* Use traefik-sso middleware in rest of services

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -4,6 +4,8 @@ help: ## Show this help message
 lint: ## Run linter
 	helm lint ./prometheus/
 	helm lint ./pomerium/
+	helm lint ./traefik/
+	helm lint ./traefik-sso/
 	helm lint ./base/ --values code-server.yaml
 	helm lint ./base/ --values grafana.yaml
 	helm lint ./base/ --values httpbin.yaml
@@ -16,9 +18,9 @@ lint: ## Run linter
 	helm lint ./base/ --values tautulli.yaml
 
 update-base: ## Update apps that use base chart
+# 	helm upgrade --install httpbin ./base/ --values httpbin.yaml
 	helm upgrade --install code-server ./base/ --values code-server.yaml
 	helm upgrade --install grafana ./base/ --values grafana.yaml
-# 	helm upgrade --install httpbin ./base/ --values httpbin.yaml
 	helm upgrade --install jackett ./base/ --values jackett.yaml
 	helm upgrade --install plex ./base/ --values plex.yaml
 	helm upgrade --install qbittorrent ./base/ --values qbittorrent.yaml
@@ -37,9 +39,18 @@ update-pomerium: ## Update Pomerium
 	  helm dependency update; \
 	  helm upgrade --install pomerium .
 
+update-traefik: ## Update Traefik
+	cd traefik; \
+	  helm dependency update; \
+	  helm upgrade --install traefik .
+	cd traefik-sso; \
+	  helm dependency update; \
+	  helm upgrade --install traefik-sso .
+
 update-all: ## Update all apps
 	make update-base
 	make update-pomerium
 	make update-prometheus
+	make update-traefik
 
 .PHONY: help
