--- a/helm/httpbin.yaml
+++ b/helm/httpbin.yaml
@@ -12,9 +12,13 @@ services:
         containerPort: 80
 
 ingressRoutes:
-  websecure:
+  web:
     match: Host(`test.hobroker.me`)
     port: 8080
-    middlewares:
-      - name: traefik-sso-forward-auth
-      - name: traefik-sso-rate-limit
+#
+#  websecure:
+#    match: Host(`test.hobroker.me`)
+#    port: 8080
+#    middlewares:
+#      - name: traefik-sso-forward-auth
+#      - name: traefik-sso-rate-limit
