--- a/helm/prometheus.yaml
+++ b/helm/prometheus.yaml
@@ -1,44 +1,56 @@
 replicaCount: 1
 
 image:
-  repository: linuxserver/syncthing
-  tag: version-v1.18.2
+  repository: prom/prometheus
+  tag: v2.30.2
   pullPolicy: IfNotPresent
 
 services:
   - type: LoadBalancer
     ports:
-      - port: 8384
-  - type: NodePort
-    suffix: -discovery
-    ports:
       - protocol: TCP
-        port: 22000
-        containerPort: 22000
-      - protocol: UDP
-        port: 22000
-        containerPort: 22000
-      - protocol: UDP
-        port: 21027
-        containerPort: 21027
+        port: 9090
 
 volumes:
-  - name: syncthing-config
+  - name: prometheus-data
     hostPath:
-      path: "/appdata/k3s/syncthing"
-  - name: syncthing-wdata
-    hostPath:
-      path: "/mnt/wdata"
+      path: "/appdata/k3s/prometheus/data"
+  - name: prometheus-configmap
+    configMap:
+      name: prometheus-configmap
 
 volumeMounts:
-  - name: syncthing-config
-    mountPath: "/config"
-  - name: syncthing-wdata
-    mountPath: "/mnt/wdata"
+  - name: prometheus-data
+    mountPath: "/prometheus"
+  - name: prometheus-configmap
+    subPath: prometheus.yml
+    mountPath: "/etc/prometheus/prometheus.yml"
 
-ingressRoutes:
-  websecure:
-    match: Host(`syncthing.hobroker.me`)
-    port: 8384
-    middlewares:
-      - name: traefik-sso
+configmaps:
+  prometheus-configmap:
+    prometheus.yml: |-
+      global:
+        evaluation_interval: 60s
+        scrape_interval: 15s
+      scrape_configs:
+        - job_name: prometheus
+          static_configs:
+            - targets:
+                - localhost:9090
+        - job_name: home_weather
+          scrape_interval: 10s
+          static_configs:
+            - targets:
+                - 192.168.29.54:5000
+        - job_name: grafana
+          static_configs:
+            - targets:
+                - grafana:5000
+        - job_name: traefik
+          static_configs:
+            - targets:
+                - traefik:9100
+        - job_name: wakatime
+          static_configs:
+            - targets:
+                - wakatime-exporter:9212
