--- a/helm/syncthing.yaml
+++ b/helm/syncthing.yaml
@@ -38,7 +38,7 @@ volumeMounts:
 
 ingressRoutes:
   websecure:
-    match: Host(`radarr.hobroker.me`)
+    match: Host(`syncthing.hobroker.me`)
     port: 8384
     middlewares:
       - name: traefik-sso
